# LinuxFanControl

./: .gitignore  CMakeLists.txt  README.md  _cleanup_report.py  build.sh  build2.sh  changelog_daemon.md  cleanup.sh  importFC.sh  main.py  patch.sh  run.sh  vendorMapping.json
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RpcClient.cpp  RpcClient.h  Translations.cpp  Translations.h
src/_gui-avalonia/: LinuxFanControl.Gui.sln
src/_gui-avalonia/LinuxFanControl.Gui/: App.axaml  Program.cs
src/_gui-avalonia/LinuxFanControl.Gui/Converters/: InverseBoolConverter.cs
src/_gui-avalonia/LinuxFanControl.Gui/Locales/: en.json
src/_gui-avalonia/LinuxFanControl.Gui/Services/: ConfigService.cs  DaemonClient.cs  FanControlImporter.cs  ThemeManager.cs
src/_gui-avalonia/LinuxFanControl.Gui/Themes/: light.json
src/_gui-avalonia/LinuxFanControl.Gui/Utils/: JsonExtensions.cs
src/_gui-avalonia/LinuxFanControl.Gui/ViewModels/: MainWindowViewModel.cs
src/_gui-avalonia/LinuxFanControl.Gui/Views/: DashboardView.axaml  MainWindow.axaml.cs
src/common/: ShmSubscriber.cpp  ShmTelemetry.h
src/daemon/: .CMakeLists.txt.kate-swp  CMakeLists.txt
src/daemon/src/: CommandIntrospection.cpp  CommandRegistry.cpp  Config.cpp  Config.hpp  Curve.hpp  Daemon.cpp  Daemon.h  Daemon.hpp  Detection.cpp  Detection.hpp  Engine.cpp  Engine.h  Engine.hpp  FanControlImport.cpp  FanControlImport.hpp  GpuMonitor.AMD.cpp  GpuMonitor.INTEL.cpp  GpuMonitor.NVIDIA.cpp  GpuMonitor.cpp  Hwmon.cpp  Hwmon.h  Hwmon.hpp  JsonLite.cpp  JsonLite.hpp  JsonRpc.cpp  JsonRpc.hpp  Log.cpp  Log.hpp  Profile.cpp  Profile.hpp  RpcHandlers.cpp  RpcHandlers.hpp  RpcServer.cpp  RpcServer.h  RpcServer.hpp  RpcTcpServer.cpp  RpcTcpServer.hpp  ShmTelemetry.cpp  ShmTelemetry.hpp  UpdateChecker.cpp  (+8 more)
src/daemon/src/include/: AutoConfig.h.in  CommandIntrospection.h  CommandIntrospection.hpp  CommandRegistry.h  CommandRegistry.hpp  Config.hpp  Daemon.h  Daemon.hpp  Detection.hpp  Engine.hpp  FanControlImport.hpp  GpuMonitor.hpp  Hwmon.hpp  Log.hpp  Profile.hpp  RpcTcpServer.hpp  ShmTelemetry.hpp  Utils.hpp  VendorMapping.hpp  Version.hpp
src/daemon/src/rpc/: ImportJobs.hpp  RpcConfig.cpp  RpcCore.cpp  RpcDaemon.cpp  RpcDetect.cpp  RpcEngine.cpp  RpcHandlers.cpp  RpcHandlers.hpp  RpcHwmonList.cpp  RpcImportAPI.hpp  RpcImportAs.cpp  RpcImportCancel.cpp  RpcImportCommit.cpp  (+5 more)
src/gui/: CMakeLists.txt  FlowLayout.cpp  FlowLayout.h  MainWindow.cs  MainWindow.h  Program.cs  RpcClient.h  TelemetryWorker.cpp  Translations.h  UserSettings.cs  gui.csproj  importer.py  ipc.py  main.py
src/gui-avalonia/LinuxFanControl.Gui/: App.axaml  App.axaml.cs  App.cs  AssetLocator.cs  LinuxFanControl.Gui.csproj  Program.cs  README.md
src/gui/Locales/: de.json  en.json  fr.json
src/gui/Models/: ChannelModel.cs  FanModel.cs  ProfileModel.cs  RuleModel.cs  SensorModel.cs
src/gui/Services/: ChannelExportTool.cs  CurveStorage.cs  DaemonAccessControl.cs  DaemonAnalyticsReporter.cs  DaemonConfigEditor.cs  DaemonConfigExporter.cs  DaemonExtensionLoader.cs  DaemonIntegrityVerifier.cs  DaemonLoadSnapshot.cs  DaemonPermissionInspector.cs  DaemonPing.cs  DaemonPowerProfileManager.cs  DaemonRecoveryAssistant.cs  DaemonSecurityScanner.cs  DaemonSelfTestRunner.cs  DaemonShutdownPlanner.cs  DaemonStateExporter.cs  DaemonStatusTray.cs  DaemonWatcher.cs  EngineControl.cs  FanControlAutoTuner.cs  FanControlBackupTool.cs  FanControlBehaviorSimulator.cs  FanControlBenchmarkTool.cs  FanControlChannelMapper.cs  FanControlCloudBridge.cs  FanControlConflictResolver.cs  FanControlDiagnosticConsole.cs  FanControlEventDispatcher.cs  FanControlEventExporter.cs  FanControlLoadBalancer.cs  FanControlOverridePanel.cs  FanControlPolicyEditor.cs  FanControlPowerScheduler.cs  FanControlProfileDesigner.cs  FanControlProfileMigrator.cs  FanControlProfileValidator.cs  FanControlRecoveryTool.cs  FanControlRemoteSync.cs  FanControlRuleAuditor.cs  (+44 more)
src/gui/Shared/: ISensorReader.cs  UnixSensorReader.cs
src/gui/Themes/: dark.css  default.json  light.css
src/gui/Tools/: ChannelEditor.cs  ConfigLoader.cs  ConfigSaver.cs  CurveEditor.cs  FanCurve.cs  FanLogic.cs  FanManager.cs  FanMode.cs  FanTrigger.cs  LayoutManager.cs  LocaleManager.cs  ProfileLoader.cs  ProfileSelector.cs  RpcBridge.cs  RuleEditor.cs  SensorManager.cs  SensorMix.cs  SettingsLoader.cs  SettingsManager.cs  ThemeManager.cs
src/gui/Views/: CalibrationView.cs  ChannelAuditTrail.cs  ChannelConfigWizard.cs  ChannelDashboard.cs  ChannelDependencyGraph.cs  ChannelGroupVisualizer.cs  CouplingPanel.cs  CouplingView.cs  CurveView.cs  DaemonHealthDashboard.cs  DaemonInterfaceMonitor.cs  DaemonLogStreamer.cs  DaemonMetricsPanel.cs  DaemonPowerStats.cs  DaemonResourceProfiler.cs  DaemonSelfTestPanel.cs  DaemonStartupProfiler.cs  DaemonState.cs  DaemonStatus.cs  DaemonStatusView.cs  EngineControlPanel.cs  FanControlAlertHistory.cs  FanControlEventLog.cs  FanControlEventTracer.cs  FanControlLoadMonitor.cs  FanControlStateVisualizer.cs  FanControlThermalMap.cs  FanGrid.cs  FanGroupManager.cs  FanGroupView.cs  FanTestPanel.cs  HwmonDebugPanel.cs  HysteresisPanel.cs  MainView.cs  MainWindow.cs  MixView.cs  ProfileBar.cs  ProfileView.cs  SensorAlertPanel.cs  SensorCalibrationWizard.cs  (+22 more)
src/gui/Widgets/: ChannelCurvePlot.cs  ChannelEditor.cs  ChannelList.cs  ChannelSummaryCard.cs  CurveEditor.cs  CurveEditorContainer.cs  CurveEditorToolbar.cs  CurvePreview.cs  DaemonLogView.cs  DaemonMonitor.cs  FanControlOverlay.cs  FanSpeedGraph.cs  FanTile.cs  LocaleSwitcher.cs  MixEditor.cs  MixRow.cs  ProfileSelector.cs  SensorTile.cs  SensorTrendPlot.cs  StatusBanner.cs  ThemeSwitcher.cs  TriggerEditor.cs  TriggerRow.cs
src/gui/dialogs/: CurveEditor.h
src/gui/locales/: de.json
src/gui/src/: .MainWindow.h.kate-swp  MainWindow.cpp  MainWindow.h  RpcClient.cpp  RpcClient.h  TelemetryWorker.cpp  TelemetryWorker.h  Translations.cpp  Translations.h
src/gui/widgets/: FanCard.cpp  SensorCard.h
src/locales/: en.json
src/packaging/: lfcd.service
src/packaging/tmpfiles.d/: lfcd.conf
src/widgets/: FanCard.cpp  FanCard.h  SensorCard.cpp
(+106 files in other folders)
